--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -2,7 +2,6 @@ name: CI/CD Simple
 on:
  push:
  branches: [ main ]
-
 jobs:
  build:
  runs-on: ubuntu-latest
@@ -11,8 +10,8 @@ jobs:
  uses: actions/checkout@v3
  - name: Instalar Node.js
  uses: actions/setup-node@v3
- with:
-node-version: '18'
+ with
+ node-version: '18'
  - name: Instalar dependencias
  run: npm install
  - name: Ejecutar pruebas
