--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,24 +1,30 @@
 name: CI/CD Simple
+
 on:
- push:
- branches: [ main ]
+  push:
+    branches: [ main ]
+
 jobs:
- build:
- runs-on: ubuntu-latest
- steps:
- - name: Clonar repositorio
- uses: actions/checkout@v3
- - name: Instalar Node.js
- uses: actions/setup-node@v3
- with
- node-version: '18'
- - name: Instalar dependencias
- run: npm install
- - name: Ejecutar pruebas
- run: npm test
- deploy:
- needs: build
- runs-on: ubuntu-latest
- steps:
- - name: Simular despliegue
- run: echo "Desplegando aplicación..."
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Clonar repositorio
+        uses: actions/checkout@v3
+
+      - name: Instalar Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '18'
+
+      - name: Instalar dependencias
+        run: npm install
+
+      - name: Ejecutar pruebas
+        run: npm test
+
+  deploy:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Simular despliegue
+        run: echo "🚀 Desplegando aplicación..."
